# vup-llm-adapter

./: README.md  pyproject.toml
scripts/: build_qa_jsonl.py  clean_and_struct.py  extract_with_llm.py  fetch_pages.py  infer_qwen.py  train_qwen2.5_qlora.py
